# SIT-examples

./: .gitignore  README.md
monte_carlo_integration/: CMakeLists.txt  event_handlers.hpp  generate_black_boxes.py  generate_boilerplate.py  monte_carlo.cpp  monte_carlo.hpp  run.py  sigwidth.hpp
monte_carlo_integration/systemc/: sc_cacc.hpp  sc_div.hpp  sc_sumsq.hpp
monte_carlo_integration/test/: estimate_pi.py  mt19937_tb.v
